# ml-recommendations-travel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  download.py  entrypoint.sh  inference.py  main.py  notebook.ipynb  pyproject.toml  readme.md
