[project]
name = "ml-recommendations-travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=26.3.1",
    "datasets>=4.8.4",
    "gradio>=6.11.0",
    "huggingface-hub>=1.9.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "torch>=2.11.0",
]
